--- a/config/production/nginx/nginx.conf
+++ b/config/production/nginx/nginx.conf
@@ -126,7 +126,17 @@ http {
 
       proxy_pass http://app_server;
     }
-
+    
+    # Cable
+    location /cable {
+      proxy_pass http://app_server;
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $http_host;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+    }
+    
     # Rails error pages
     error_page 500 502 503 504 /500.html;
     location = /500.html {
